# photo_backup_server

./: .gitignore  Cargo.toml  env.example
.cargo/: config.toml
migrations/: 20250322080513_init.down.sql  20250322080513_init.up.sql  20250406073113_create_media.up.sql  20250424142107_create_media_metadata.down.sql  20250424142107_create_media_metadata.up.sql  20250511040509_create_login_activity.down.sql  20250511040509_create_login_activity.up.sql  20250511083156_create_refresh_tokens.up.sql
src/: app.rs  main.rs
src/auth/: jwt.rs  mod.rs
src/auth/dtos/: claims.rs  claims_dto.rs  login.rs  login_activity_dto.rs  login_request_dto.rs  login_response_dto.rs  mod.rs  refresh_token_payload.rs  refresh_token_payload_dto.rs  register_request_dto.rs  verify_token_response.rs  verify_token_response_dto.rs
src/auth/handlers/: auth.rs  auth_handler.rs
src/auth/middlewares/: auth.rs  auth_middleware.rs  mod.rs  refresh_token.rs  refresh_token_middleware.rs
src/auth/models/: login_activity.rs  login_activity_model.rs  mod.rs  refresh_token.rs  refresh_token_model.rs
src/auth/routes/: auth.rs  auth_route.rs  mod.rs
src/auth/services/: auth.rs  auth_service.rs  login_activity.rs  login_activity_service.rs  mod.rs  refresh_token.rs  refresh_token_service.rs
src/common/services/: model_ops.rs
src/common/traits/: mod.rs  model_ops.rs
src/config/: mod.rs
src/controllers/: health.rs  mod.rs  test.rs  upload.rs
src/dtos/: mod.rs  register.rs  user.rs
src/errors/: app_error.rs  error_response.rs  error_response_dto.rs  mod.rs
src/handlers/: auth.rs  user.rs
src/media/: mod.rs
src/middlewares/: auth.rs
src/routes/: api.rs  auth.rs  mod.rs  test.rs  user.rs
src/services/: file_storage.rs  user.rs
src/user/: mod.rs
src/utility/: hash.rs
src/utils/: hash.rs
(+60 files in other folders)
