[package]
name = "photo_backup_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
ffprobe = "0.4.0"
hyper = "1.6.0"
imageinfo = "0.7.27"
infer = "0.19.0"
jsonwebtoken = "9.3.1"
kamadak-exif = "0.6.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "limit"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
